# forge

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: example.yaml  go_curated.yaml  go_reviewer_real.yaml
src/: cli.py
src/core/: dataset_builder.py  discoverer.py  downloader.py  instruction_gen.py  judge.py  processor.py  verifier.py
src/plugins/: __init__.py
src/sources/: __init__.py  arxiv.py  base.py  github.py  hf_datasets.py
tests/: test_budget.py  test_dataset_builder.py  test_downloader.py  test_hf_datasets.py  test_instruction_gen.py  test_judge.py  test_pipeline.py  test_processor.py  test_quality_gate.py  test_sources.py  test_verifier.py
tests/data/: arxiv_sample.xml
