[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guildlm-forge"
version = "0.1.0"
description = "Forge -- the domain-agnostic data pipeline for GuildLM."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "GuildLM" }]
keywords = ["llm", "dataset", "sft", "data-pipeline", "guildlm"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0",
    "requests>=2.28",
    "typer>=0.9",
    "pyyaml>=6.0",
    "tenacity>=8.0",
]

[project.optional-dependencies]
parquet = ["pyarrow>=14.0"]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
]

[project.scripts]
forge = "src.cli:app"

[project.urls]
Homepage = "https://github.com/guildlm/forge"
Documentation = "https://github.com/guildlm/guildlm.github.io"

[tool.setuptools]
packages = ["src", "src.core", "src.sources", "src.plugins"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Typer uses function calls (typer.Option/Argument) in argument defaults by design.
"src/cli.py" = ["B008"]
